Rearrange the icons on the portfolio page

--- a/index.html
+++ b/index.html
@@ -354,26 +354,26 @@
                         </div>
                         <div class="portfolioImage">
                             <div class="image">
-								<a href="#rigidmotors" class="btn btn-success">
-									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
+								<a href="#raymarchingprimitives" class="btn btn-success">
+									<img src="http://i.imgur.com/AX4KmIr.png" alt=""></a>
                             </div>
                         </div>
                         <div class="portfolioImage">
                             <div class="image">
-								<a href="#viciousorb" class="btn btn-primary">
-									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="portfolioImage">
-                            <div class="image">
-								<a href="#businesscardgame" class="btn btn-success">
+								<a href="#businesscardgame" class="btn btn-primary">
 									<img src="http://i.imgur.com/fFCfXU5.jpg" alt=""></a>
                             </div>
                         </div>
                         <div class="portfolioImage">
                             <div class="image">
-								<a href="#raymarchingprimitives" class="btn btn-info">
-									<img src="http://i.imgur.com/AX4KmIr.png" alt=""></a>
+								<a href="#viciousorb" class="btn btn-success">
+									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="portfolioImage">
+                          <div class="image">
+								<a href="#rigidmotors" class="btn btn-info">
+									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
                             </div>
                         </div>
                     </section>
