--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@
                 </div>
               <!-- End Portfolio Data -->
 	      <!-- Project Pages -->
+        <!-- test -->
               <!-- Rigid Motors Page -->
                 <div id="rigidmotors">
                     <section class="clearfix">
