--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@ For my program, we always generate an Euler circuit graph then, depending on the
 			    </p>
                         <div class="g6">
                             <div class="image">
-                                <img src="http://i.imgur.com/9ASGcxk.jpg" alt="">
+                                <img src="http://i.imgur.com/qt1Mamp.gif" alt="">
                             </div>
                         </div>
                         </div>
