--- a/index.html
+++ b/index.html
@@ -348,12 +348,6 @@
                         </div>
                         <div class="portfolioImage">
                             <div class="image">
-								<a href="#infection" class="btn btn-primary">
-									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="portfolioImage">
-                            <div class="image">
 								<a href="#raymarchingprimitives" class="btn btn-success">
 									<img src="http://i.imgur.com/AX4KmIr.png" alt=""></a>
                             </div>
@@ -366,7 +360,13 @@
                         </div>
                         <div class="portfolioImage">
                             <div class="image">
-								<a href="#viciousorb" class="btn btn-success">
+								<a href="#infection" class="btn btn-success">
+									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="portfolioImage">
+                            <div class="image">
+								<a href="#viciousorb" class="btn btn-primary">
 									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
                             </div>
                         </div>
