update resume download text

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="g1">
                             <div class="sidebar">
                                 <h5>
-					<a href="https://www.dropbox.com/s/gjlq0u9o8m7a12l/DavidJohnstonResume.docx?dl=1">Download</a>
+					<a href="https://www.dropbox.com/s/gjlq0u9o8m7a12l/DavidJohnstonResume.docx?dl=1">Download Resume</a>
                                 </h5>
 				<div class="break"></div>
                                 <h3>
