Starting description for raymarching website

--- a/index.html
+++ b/index.html
@@ -528,11 +528,12 @@ For my program, we always generate an Euler circuit graph then, depending on the
 				Raymarching Primitives
                             </h1>
 			    <p>
-Currently filling this out!
-</p><h6>
-Currently filling this out!
-</h6><div class="break"></div><p>
-Currently filling this out!
+            I have long been fascinated by the work of the demo scene. From <a href="http://www.pouet.net/prod.php?which=66065">crazy demos that don't run on any machine I have access to</a>, to demos that push the limits of what we can do with limited memory, to tiny proofs of concepts that run on a website, I am fascinated by turning code into beautiful art for the sake of art. When one looks around at graphics demos these days, one will find raymarching all over the place. It is a powerful, widely applicable technique, that allows for a ton of creativity. After seeing so many demos featuring raymarcing, I figured that I should understand how it works, so I set about creating a very basic scene through raymarching primitives. My work can be found <a href="https://www.shadertoy.com/view/Xsy3Ry">here</a> on Shadertoy.
+          </p><h6>
+            Shadows
+          </h6><div class="break"></div>
+          <p>
+            After the initial implementation of the sphere, torus, and array of rounded boxes in that scene, I took a break from the project for a day or two.
 			    </p>
                         </div>
                     </section>
