Add HRUMC section and finish off shadow section

--- a/index.html
+++ b/index.html
@@ -528,13 +528,19 @@ For my program, we always generate an Euler circuit graph then, depending on the
 				Raymarching Primitives
                             </h1>
 			    <p>
-            I have long been fascinated by the work of the demo scene. From <a href="http://www.pouet.net/prod.php?which=66065">crazy demos that don't run on any machine I have access to</a>, to demos that push the limits of what we can do with limited memory, to tiny proofs of concepts that run on a website, I am fascinated by turning code into beautiful art for the sake of art. When one looks around at graphics demos these days, one will find raymarching all over the place. It is a powerful, widely applicable technique, that allows for a ton of creativity. After seeing so many demos featuring raymarcing, I figured that I should understand how it works, so I set about creating a very basic scene through raymarching primitives. My work can be found <a href="https://www.shadertoy.com/view/Xsy3Ry">here</a> on Shadertoy.
+            I have long been fascinated by the work of the demo scene. From <a href="http://www.pouet.net/prod.php?which=66065">crazy demos that don't run on any machine I have access to</a>, to <a href="http://www.pouet.net/prod.php?which=53816">demos that push the limits of what we can do in very little space</a>, to <a href="https://www.shadertoy.com/view/XsX3RB">tiny proofs of concepts that run on a website</a>, I am fascinated by turning code into beautiful art for the sake of art. When one looks around at graphics demos these days, one finds raymarching all over the place. It is a powerful, widely applicable technique, that allows for a ton of creativity. After seeing so many demos featuring raymarcing, I figured that I should understand how it works, so I set about creating a very basic scene through raymarching primitives. My work can be found <a href="https://www.shadertoy.com/view/Xsy3Ry">here</a> on Shadertoy.
           </p><h6>
             Shadows
           </h6><div class="break"></div>
           <p>
-            After the initial implementation of the sphere, torus, and array of rounded boxes in that scene, I took a break from the project for a day or two.
+            After the initial implementation of the sphere, torus, and array of rounded boxes in that scene, I took a break from the project for the day. I woke up the next day with an idea in my head for how I could easily do shadows given the basic shapes and raymarching algorithm I already had. Once I find the shape in the scene, I thought, I could march from that shape to the light source(s) and if I ended up intersecting any shapes on the way, I could shade the original shape accordingly. I implemented this on an approximately fifteen minute bus ride. This was a great confirmation to me of the power and potential for creative expression in raymarching.
+			    </p><h6>
+            The Hudson River Undergraduate Math Conference
+          </h6><div class="break"></div>
+          <p>
+            A few months after finshing up this project, I was given the opportunity to speak at the Hudson River Undergraduate Math Conference (HRUMC). I decided to speak on raymarching, using the knowledge I gained in researching the topic for this project, and the project itself as a simple example. 
 			    </p>
+                        </div>
                         </div>
                     </section>
                 </div>
