Update about page and change landing to projects

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <div id="tab-container" class="tab-container">
           <!-- Tab List -->
             <ul class='etabs'>
-                <li class='tab' id="tab-about">
-                  <a href="#about"><i class="fa fa-user"></i><span> About Me</span></a>
+                <li class='tab'>
+                  <a href="#portfolio"><i class="fa fa-heart"></i><span> Projects</span></a>
                 </li>
                 <li class='tab'>
                   <a href="#resume"><i class="fa fa-file-text"></i><span> Resume</span></a>
                 </li>
-                <li class='tab'>
-                  <a href="#portfolio"><i class="fa fa-heart"></i><span> Projects</span></a>
+                <li class='tab' id="tab-about">
+                  <a href="#about"><i class="fa fa-user"></i><span> About Me</span></a>
                 </li>
                 <li class='tab' style="display: none;">
                   <a href="#contact"><i class="fa fa-envelope"></i><span> Contact</span></a>
@@ -106,7 +106,7 @@
                                     Game Programmer
                                 </h4>
                                 <p>
-                                    Hi! I'm a student game programmer currently attending Champlain College. I am particularly interested in graphics, but I am passionate about all kinds of programming. I love Math, Literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things.
+                                Hi! I'm a game programmer currently living and working in Montreal. I am into design as well, and have a lot of fun with UI programming, though I like all kinds of programming. I love math, literature, <a href="http://nuts4nuts.com/" target="_blank">Nuts4Nuts</a>, writing implements and Prince. I get excited about tiny things. My life's goal is to raise a child near <a href="http://www.play-scapes.com/play-design/contemporary-design/woodthorpe-grange-playground-keita-takahashi-nottingham-uk-proposed/" target="_blank">Keita Takahashi's eventual playground.</a>
                                 </p>
                             </div>
                         </div>
