Make portfolio main page

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			  </div>
                           <div class="g7">
 							<div class="image-small-left">
-								<a href="https://www.facebook.com/david.johnston.14268769" target="_blank">
+								<a href="https://www.facebook.com/david.karr.johnston" target="_blank">
 									<img src="http://www.webwatcher.com/images/facebook_img.jpg" alt=""></a>
                             </div>
 						  </div>
