Change name of the resume

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="g1">
                             <div class="sidebar">
                                 <h5>
-					<a href="MyResumeGameProgrammer.pdf">Download Resume</a>
+					<a href="DavidJohnstonGameProgrammerResume.pdf">Download Resume</a>
                                 </h5>
 				<div class="break"></div>
                                 <h3>
