Update some of resume section, other stuff requires input

--- a/index.html
+++ b/index.html
@@ -188,24 +188,67 @@
                 <div id="resume">
                     <section class="clearfix">
                         <div class="g2">
-                        <h3>
-                                Education
+                            <h3>
+                              Work
                             </h3>
                             <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Champlain College (University Level)
-                                    </h5><span class="label label-success">2012-2016</span>
-                                    <p>
-                                        Currently working towards a <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a>.<br>
-                                        Minoring in Mathematics.<br>
-                                        GPA: 3.755<br>
-                                        President's List one semester, Dean's list five semesters<br>
-                                        Trustee Scholar<br>
-                                        Inspiration Scholar<br>
-                                        Recipient of the Mt. Mansfield TV Award
-                                    </p>
-                                </li>
+                              <li>
+                                <h5>
+                                  Gameplay Programmer &ndash; Tuque Games
+                                </h5><span class="label label-info">June 2016-May 2017</span>
+                                <p>
+                                <ul class="reset">
+                                  <li>
+                                    Worked on a team of nine on an unannounced UE4 roguelike shooter.
+                                  </li>
+                                  <li>
+                                    Had primary ownership of player controls, moment-to-moment gameplay, and UI programming using UMG.
+                                  </li>
+                                  <li>
+                                    Developed and maintained tools in Excel for more efficient management, balancing, and analysis of game data. This touched room generation, character stats, and item pools.
+                                  </li>
+                                  <li>
+                                    Contributed to secondary systems such as item effects, metagame, rendom events, and more.
+                                  </li>
+                                  <li>
+                                    Stayed ever-vigilant with artists, designers, and other programmers to measure and maintain good performance.
+                                  </li>
+                                </ul>
+                                </p>
+                              </li>
+                              <li>
+                                <h5>
+                                  Junior Programmer &ndash; Tuque Games
+                                </h5><span class="label label-info"> May 2015-August 2015</span>
+                                <p>
+                                <ul class="reset">
+                                  <li>
+                                    Worked on a team of four on an unanounced UE4 roguelike shooter.
+                                  </li>
+                                  <li>
+                                    Worked closesly with the lead programmer to design, implement, and tune all kinds of gameplay features from the basic shooting to the item unlocking metagame.
+                                  </li>
+                                  <li>
+                                    Rearchitected and ported the UI from Slate to UMG.
+                                  </li>
+                                </ul>
+                                </p>
+                              </li>
+                              <li>
+                                <h5>
+                                  Tutor / TA &ndash; Champlain College
+                                </h5><span class="label label-info">Sept 2013-April 2014 & Sept 2015-Dec 2015</span>
+                                <p>
+                                <ul class="reset">
+                                  <li>
+                                    Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College.
+                                  </li>
+                                  <li>
+                                    In the fall 2015 semester, assisted a professor with her section of Introduction to Programming, grading assignments and helping students one-to-one.
+                                  </li>
+                                </ul>
+                                </p>
+                              </li>
                             </ul>
                             <h3>
                                 Projects
@@ -248,43 +291,24 @@
                                     </p>
                                 </li>
                             </ul>
-                            <h3>
-                                Work
-                            </h3>
-                            <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Tutor / TA &ndash; Champlain College
-                                    </h5><span class="label label-success">Sept 2013-April 2014 & Sept 2015-Dec 2015</span>
-                                    <p>
-                                        Tutored students in C++ for the Introduction to Programming, Advanced Programming and Data Structures and Algorithms classes at Champlain College. In the fall 2015 semester, assisted a professor with her section of Introduction to Programming, grading assignments and helping students one-to-one.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Gameplay Programmer &ndash; Tuque Games
-                                    </h5><span class="label label-info"> May 2015-August 2015</span>
-                                    <p>
-                                        Worked on a team of four on an unanounced UE4 roguelike shooter. Worked closesly with the lead programmer to design, implement, and tune all kinds of gameplay features from the basic shooting to the item unlocking metagame.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Study-Abroad Blogger &ndash; Champlain College
-                                    </h5><span class="label label-info">Jan 2015-April 2015</span>
-                                    <p>
-                                        Writing for Champlain College's study-abroad blog about my time in Montreal, visiting game studios, attempting to learn French, and exploring the city.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Hiring Committee &ndash; Brooklyn Free School
-                                    </h5><span class="label label-info">Anually, Spring 2009-2012</span>
-                                    <p>
-                                        Served on the committee which is tasked with making hiring decisions at the Brooklyn Free School. Evaluated resumes, interviewed candidates, and participated in the selection process.
-                                    </p>
-                                </li>
-                            </ul>
+                          <h3>
+                            Education
+                          </h3>
+                          <ul class="no-list work">
+                            <li>
+                              <h5>
+                                Champlain College (University Level)
+                              </h5><span class="label label-success">2012-2016</span>
+                              <p>
+                              <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a> &ndash; Minor in Mathematics<br>
+                              GPA: 3.753<br>
+                              President's List one semester, Dean's list six semesters<br>
+                              Trustee Scholar<br>
+                              Inspiration Scholar<br>
+                              Recipient of the Mt. Mansfield TV Award
+                              </p>
+                            </li>
+                          </ul>
 							<h5 align="center">
 								References available on request.
 							</h5>
@@ -307,6 +331,9 @@
                                 <div class="meter carrot">
                                     <span style="width: 80%"><span>Unity</span></span>
                                 </div>
+                                <div class="meter asbestos">
+                                    <span style="width: 80%"><span>Unreal 4</span></span>
+                                </div>
                                 <div class="meter wisteria">
                                     <span style="width: 75%"><span>Git/SVN/Perforce</span></span>
                                 </div>
@@ -318,19 +345,13 @@
                                     Programming Languages
                                 </h5>
                                 <div class="meter emerald">
-                                    <span style="width: 90%"><span>C/C++</span></span>
+                                    <span style="width: 90%"><span>C++</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 90%"><span>C#</span></span>
-                                </div>
-                                <div class="meter wisteria">
-                                    <span style="width: 75%"><span>Java</span></span>
-                                </div>
-                                <div class="meter sunflower">
-                                    <span style="width: 80%"><span>Flash/AS3</span></span>
+                                    <span style="width: 80%"><span>C#</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 55%"><span>HLSL</span></span>
+                                    <span style="width: 60%"><span>VBA</span></span>
                                 </div>
                             </div>
                         </div>
@@ -492,16 +513,16 @@ Graph Theory
 I got to thinking about the possible games one could fit on a business card, and decided an abstract puzzle sort of thing would be best given the strict restraints of the platform. A few facts from graph theory popped into my mind and, bam, I had my randomly generatable puzzle game. The idea is that I would randomly generate graphs with Euler circuits, Euler paths, and Hamiltonian circuits, give each graph a unique id number, and provide little instructions for how the graph can be traversed. The methods for generating these graphs are fairly simple, it all comes down to the number of connections between nodes, here's how it works: <br>
 <ul>
     <li>
-        <p>If no nodes have an odd number of connections, the graph contains an Euler circuit.</p>
+        If no nodes have an odd number of connections, the graph contains an Euler circuit.
     </li>
     <li>
-        <p>If exactly two nodes have an odd number of connections, the graph contains an Euler path.</p>
+        If exactly two nodes have an odd number of connections, the graph contains an Euler path.
     </li>
     <li>
-        <p>If we take the <a href="https://en.wikipedia.org/wiki/Line_graph">line graph</a> of a graph with an Euler circuit, it will contain a Hamiltonian circuit.</p>
+        If we take the <a href="https://en.wikipedia.org/wiki/Line_graph">line graph</a> of a graph with an Euler circuit, it will contain a Hamiltonian circuit.
     </li>
     <li>
-        <p>Note: If more than two nodes have an odd number of connections, the graph has none of these properties! (Also, it is impossible for only one node to have an odd number of connections.)</p>
+        Note: If more than two nodes have an odd number of connections, the graph has none of these properties! (Also, it is impossible for only one node to have an odd number of connections.)
     </li>
 </ul>
 For my program, we always generate an Euler circuit graph then, depending on the type of graph we desire, we either leave it alone, prune (or add) an edge (to get an Euler path), or take its line graph (to get a Hamiltonian circuit). From there we place nodes randomly, attempting to give them as much space as possible within the business card dimensions, then we draw edges between the nodes. Finally, we simply take a screen shot of the generated graph, instruction text, and id number, and export it to a png for use as a potential card back.
