--- a/index.html
+++ b/index.html
@@ -251,45 +251,27 @@
                               </li>
                             </ul>
                             <h3>
-                                Projects
+                              Projects
                             </h3>
                             <ul class="no-list work">
-                                <li>
-                                    <h5>
-                                        Ripples
-                                    </h5>
-                                    <p>
-        	        Working with two designers, three producers, an artist, and two other programmers to make an elegant, ambient, stylish action game in Unity 5.<br><br>
-                    The team of Ripples came together in the mutual desire to make a stylish, polished game by the end of the year. This has been the culmination of our team's collective experience with action games, Unity, and friction in games through our time at Champlain College. We started the game with half of the team in the first semester of the year, and have expanded to the current size for the second semester.
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-					                    Infection
-                                    </h5>
-                                    <p>
-					Worked with a designer, producer, artist, and another programmer to make a networked strategy game in Unity 4.6.<br><br>
-					In developing Infection I learned so much about user experience. A videogame must teach the player how to play, and that is no small task. Throughout the whole production cycle we focused on being meticulous about making everything clear to the player. We have worked very hard to make sure that every action has ample sign and feedback..
-                                    </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Rigid Motors
-                                    </h5>
-                                    <p>
-					Worked with a designer, producer, and artist over four weeks to make a mobile puzzle-platformer in Flash.<br><br>
-					This project taught me a lot about thinking about platform. In targeting mobile devices, I worked with the designer to design controls and levels that feel good, and with the artist to get around the graphical limitations of the platform.
-                                   </p>
-                                </li>
-                                <li>
-                                    <h5>
-                                        Vicious Orb
-                                    </h5>
-                                    <p>
-					Working with an artist to make a competitive local multiplayer game in Unity 4.6.<br><br>
-					This project has let me experiment a lot with satisfaction. There is a lot of talk these days about game feel, or friction; this is my platform for learning about it. I have tried to make every piece of feedback react to the state of the game.
-                                    </p>
-                                </li>
+                              <li>
+                                <h5>
+                                  Ripples
+                                </h5><span class="label label-info">August 2015-May 2016</span>
+                                <p>
+                                <ul class="reset">
+                                  <li>
+                                    Worked on an eight person team developing a rhythm-based local multiplayer action game using Unity, C#, and Git.
+                                  </li>
+                                  <li>
+                                    Lead technical side of the production, fleshing out core design with lead designer and managing priorities throughout production.
+                                  </li>
+                                  <li>
+                                    Researched and developed custom beat matching algorithm so that users can play to their own music.
+                                  </li>
+                                </ul>
+                                </p>
+                              </li>
                             </ul>
                           <h3>
                             Education
@@ -298,7 +280,7 @@
                             <li>
                               <h5>
                                 Champlain College (University Level)
-                              </h5><span class="label label-success">2012-2016</span>
+                              </h5><span class="label label-info">2012-2016</span>
                               <p>
                               <a href="http://www.champlain.edu/academics/undergraduate-academics/majors-and-specializations/game-programming">BS in Game Programming</a> &ndash; Minor in Mathematics<br>
                               GPA: 3.753<br>
