Move Download Resume link and align Skills with Work

--- a/index.html
+++ b/index.html
@@ -291,16 +291,13 @@
                               </p>
                             </li>
                           </ul>
-							<h5 align="center">
-								References available on request.
-							</h5>
+                          <h5 align="center">
+                            References available on request.
+                          </h5>
                         </div>
                         <div class="g1">
                             <div class="sidebar">
-                                <h5>
-					<a href="DavidJohnstonGameProgrammerResume.pdf">Download Resume</a>
-                                </h5>
-				<div class="break"></div>
+				<div></div>
                                 <h3>
                                     Skills
                                 </h3>
@@ -335,6 +332,9 @@
                                 <div class="meter asbestos">
                                     <span style="width: 60%"><span>VBA</span></span>
                                 </div>
+                                <h5>
+                                  <a href="DavidJohnstonGameProgrammerResume.pdf">Download Resume</a>
+                                </h5>
                             </div>
                         </div>
                     </section>
