--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                         </div>
                         <div class="g1">
                             <div class="sidebar">
+                              <div style="clear:both"></div>
                                 <h3>
                                     Skills
                                 </h3>
