Fixed some typos

--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@
                                 <p>
                                 <ul class="reset">
                                   <li>
-                                    Worked on a team of four on an unanounced UE4 roguelike shooter.
+                                    Worked on a team of four on an unannounced UE4 roguelike shooter.
                                   </li>
                                   <li>
-                                    Worked closesly with the lead programmer to design, implement, and tune all kinds of gameplay features from the basic shooting to the item unlocking metagame.
+                                    Worked closely with the lead programmer to design, implement, and tune all kinds of gameplay features from the basic shooting to the item unlocking metagame.
                                   </li>
                                   <li>
                                     Rearchitected and ported the UI from Slate to UMG.
