Add placeholder spaces for the new project pages

--- a/index.html
+++ b/index.html
@@ -344,40 +344,52 @@
                 <div class="portfolioContainer" id="portfolio">
                     <section class="clearfix">
                     	<div class="portfolioImage">
-                            <div class="image">
-								<a href="#ripples" class="btn btn-info">
-									<img src="http://i.imgur.com/xyzk88t.png" alt=""></a>
-                            </div>
+                          <div class="image">
+                            <a href="#makeaface" class="btn btn-info">
+                              <img src="https://i.imgur.com/VM7IQ6r.jpg" alt=""></a>
+                          </div>
                         </div>
-                        <div class="portfolioImage">
-                            <div class="image">
-								<a href="#raymarchingprimitives" class="btn btn-success">
-									<img src="http://i.imgur.com/AX4KmIr.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="portfolioImage">
-                            <div class="image">
-								<a href="#businesscardgame" class="btn btn-primary">
-									<img src="http://i.imgur.com/fFCfXU5.jpg" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="portfolioImage">
-                            <div class="image">
-								<a href="#infection" class="btn btn-success">
-									<img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="portfolioImage">
-                            <div class="image">
-								<a href="#viciousorb" class="btn btn-primary">
-									<img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
-                            </div>
+                    	<div class="portfolioImage">
+                          <div class="image">
+                            <a href="#roulettecv" class="btn btn-info">
+                              <img src="https://i.imgur.com/Z49h0MC.png" alt=""></a>
+                          </div>
                         </div>
                         <div class="portfolioImage">
                           <div class="image">
-								<a href="#rigidmotors" class="btn btn-info">
-									<img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
-                            </div>
+                            <a href="#ripples" class="btn btn-info">
+                              <img src="http://i.imgur.com/xyzk88t.png" alt=""></a>
+                          </div>
+                        </div>
+                        <div class="portfolioImage">
+                          <div class="image">
+                            <a href="#raymarchingprimitives" class="btn btn-info">
+                              <img src="http://i.imgur.com/AX4KmIr.png" alt=""></a>
+                          </div>
+                        </div>
+                        <div class="portfolioImage">
+                          <div class="image">
+                            <a href="#businesscardgame" class="btn btn-info">
+                              <img src="http://i.imgur.com/fFCfXU5.jpg" alt=""></a>
+                          </div>
+                        </div>
+                        <div class="portfolioImage">
+                          <div class="image">
+                            <a href="#infection" class="btn btn-info">
+                              <img src="http://i.imgur.com/hERvFtU.png" alt=""></a>
+                          </div>
+                        </div>
+                        <div class="portfolioImage">
+                          <div class="image">
+                            <a href="#viciousorb" class="btn btn-info">
+                              <img src="http://i.imgur.com/SzYEibJ.png" alt=""></a>
+                          </div>
+                        </div>
+                        <div class="portfolioImage">
+                          <div class="image">
+                            <a href="#rigidmotors" class="btn btn-info">
+                              <img src="http://i.imgur.com/pk8GEx2.png" alt=""></a>
+                          </div>
                         </div>
                     </section>
                 </div>
