--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
             <section class="clearfix">
               <div class="g6">
                 <div class="image">
-                  <img src="http://i.imgur.com/i41kFq5.gif" alt="">
+                  <img src="images/projects/ZoomedOutMaF.gif" alt="">
                 </div>
               </div>
               <div class="g4">
