Shrink the roucv gif and add it to index

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             <section class="clearfix">
               <div class="g6">
                 <div class="image">
-                  <img src="http://i.imgur.com/i41kFq5.gif" alt="">
+                  <img src="images/projects/RouCV.gif" alt="">
                 </div>
               </div>
               <div class="g4">
